test_project/test_pcks/invalid/gdscript.gd
# Script
extends Node


func _ready():
    pass
